--- a/netishr/person_information_settings.html
+++ b/netishr/person_information_settings.html
@@ -116,7 +116,6 @@
                             <li><a href="manpowerplanning.html">Manpower Planning</a></li>
                             <li><a href="recruitmentplanning.html">Recruitment Planning</a></li>
                             <li><a href="selectionprocess.html">Selection Process</a></li>
-                            <li><a href="applicants.html">Applicants</a></li>
                         </ul>
                     </li>
                     <li>
@@ -192,19 +191,19 @@
                                 <a href="#">Payroll <span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="#">Salary Entry</a>
+                                        <a href="payroll_salary_entry.html">Salary Entry</a>
                                     </li>
                                     <li>
-                                        <a href="#">Tax Calculation</a>
+                                        <a href="payroll_tax_calculation.html">Tax Calculation</a>
                                     </li>
                                     <li>
-                                        <a href="#">Overtime Calculation</a>
+                                        <a href="payroll_overtime_calculation.html">Overtime Calculation</a>
                                     </li>
                                     <li>
-                                        <a href="#">Salary Calculation</a>
+                                        <a href="payroll_salary_calculation.html">Salary Calculation</a>
                                     </li>
                                     <li>
-                                        <a href="#">Payslip</a>
+                                        <a href="payroll_salary_calculation_details.html">Payslip</a>
                                     </li>
                                 </ul>
                             </li>
@@ -227,6 +226,7 @@
 
             </div>
         </nav>
+
         <div id="page-wrapper" class="gray-bg dashbard-1">
             <div class="row border-bottom">
                 <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
@@ -476,6 +476,7 @@
                                             <th>Label</th>
                                             <th>Type</th>
                                             <th>Use</th>
+                                            <th>Order</th>
                                             <th>Status</th>
                                             <th class="text-right">
                                                 Action
@@ -500,6 +501,9 @@
                                             <td>
                                                 Persons
                                             </td>
+                                            <td>
+                                                1
+                                            </td>                                            
                                             <td>
                                                 <span class="label label-primary">Active</span>
                                             </td>
@@ -526,6 +530,9 @@
                                             <td>
                                                 Applicants
                                             </td>
+                                            <td>
+                                                2
+                                            </td>                                            
                                             <td>
                                                 <span class="label label-primary">Active</span>
                                             </td>
