--- a/netishr/administrator_remuneration_settings.html
+++ b/netishr/administrator_remuneration_settings.html
@@ -115,7 +115,6 @@
                             <li><a href="manpowerplanning.html">Manpower Planning</a></li>
                             <li><a href="recruitmentplanning.html">Recruitment Planning</a></li>
                             <li><a href="selectionprocess.html">Selection Process</a></li>
-                            <li><a href="applicants.html">Applicants</a></li>
                         </ul>
                     </li>
                     <li>
@@ -191,19 +190,19 @@
                                 <a href="#">Payroll <span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="#">Salary Entry</a>
+                                        <a href="payroll_salary_entry.html">Salary Entry</a>
                                     </li>
                                     <li>
-                                        <a href="#">Tax Calculation</a>
+                                        <a href="payroll_tax_calculation.html">Tax Calculation</a>
                                     </li>
                                     <li>
-                                        <a href="#">Overtime Calculation</a>
+                                        <a href="payroll_overtime_calculation.html">Overtime Calculation</a>
                                     </li>
                                     <li>
-                                        <a href="#">Salary Calculation</a>
+                                        <a href="payroll_salary_calculation.html">Salary Calculation</a>
                                     </li>
                                     <li>
-                                        <a href="#">Payslip</a>
+                                        <a href="payroll_salary_calculation_details.html">Payslip</a>
                                     </li>
                                 </ul>
                             </li>
@@ -226,6 +225,7 @@
 
             </div>
         </nav>
+
         <div id="page-wrapper" class="gray-bg dashbard-1">
             <div class="row border-bottom">
                 <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
@@ -409,8 +409,14 @@
                                                 <td>
                                                 <a href="#" id="incometax" data-type="select" data-pk="1" data-value="" data-title="Select 0 or 1" class="editable editable-click" style="color: gray;">Indonesia</a>
                                                 </td>
-
-
+                                            </tr>
+                                            <tr class="gradeX">
+                                                <td>Overtime fee rule</td>
+                                                <td>Rule on which income overtime fee calculation is made
+                                                </td>
+                                                <td>
+                                                <a href="#" id="incometax" data-type="select" data-pk="1" data-value="" data-title="Select 0 or 1" class="editable editable-click" style="color: gray;">Indonesia</a>
+                                                </td>
                                             </tr>
                                             <tr class="gradeX">
                                                 <td>AutoPayslipPassword</td>
