--- a/netishr/persons.html
+++ b/netishr/persons.html
@@ -114,7 +114,6 @@
                             <li><a href="manpowerplanning.html">Manpower Planning</a></li>
                             <li><a href="recruitmentplanning.html">Recruitment Planning</a></li>
                             <li><a href="selectionprocess.html">Selection Process</a></li>
-                            <li><a href="applicants.html">Applicants</a></li>
                         </ul>
                     </li>
                     <li>
@@ -190,19 +189,19 @@
                                 <a href="#">Payroll <span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="#">Salary Entry</a>
+                                        <a href="payroll_salary_entry.html">Salary Entry</a>
                                     </li>
                                     <li>
-                                        <a href="#">Tax Calculation</a>
+                                        <a href="payroll_tax_calculation.html">Tax Calculation</a>
                                     </li>
                                     <li>
-                                        <a href="#">Overtime Calculation</a>
+                                        <a href="payroll_overtime_calculation.html">Overtime Calculation</a>
                                     </li>
                                     <li>
-                                        <a href="#">Salary Calculation</a>
+                                        <a href="payroll_salary_calculation.html">Salary Calculation</a>
                                     </li>
                                     <li>
-                                        <a href="#">Payslip</a>
+                                        <a href="payroll_salary_calculation_details.html">Payslip</a>
                                     </li>
                                 </ul>
                             </li>
@@ -225,6 +224,7 @@
 
             </div>
         </nav>
+
         <div id="page-wrapper" class="gray-bg dashbard-1">
             <div class="row border-bottom">
                 <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
