--- a/netishr/performance_evidence.html
+++ b/netishr/performance_evidence.html
@@ -562,6 +562,17 @@
                                                                         </div>
 
                                                                         <div class="row">
+                                                                            <label class="col-sm-3 control-label">Evaluation Phase: </label>
+                                                                            <div class="col-sm-3">
+                                                                                <select data-placeholder="Evaluation phase" class="chosen-select">
+                                                                                    <option value="1" selected>1</option>
+                                                                                    <option value="2" selected>2</option>
+                                                                                    <option value="3" selected>3</option>
+                                                                                    <option value="4" selected>4</option>
+                                                                                </select>
+                                                                            </div>
+                                                                        </div>
+                                                                        <div class="row">
 
                                                                             <label class="col-sm-12 control-label">KPI or Competency: </label>
                                                                             <div class="col-sm-4">
@@ -587,6 +598,7 @@
                                                                             </div>
                                                                         </div>
                                                                         <div class="row">
+                                                                            <label class="col-sm-12 control-label">Evidence file: </label>
                                                                             <div class="fileinput fileinput-new input-group" data-provides="fileinput">
                                                                                 <div class="form-control col-sm-4" data-trigger="fileinput"><i class="glyphicon glyphicon-file fileinput-exists"></i> <span class="fileinput-filename"></span></div>
                                                                                 <span class="input-group-addon btn btn-default btn-file"><span class="fileinput-new">Select file</span><span class="fileinput-exists">Change</span>
